--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <a-scene 
         vr-mode-ui='enabled: false' 
         embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-    <a-camera gps-camera="minDistance: 10;" rotation-reader></a-camera>
+        arjs='sourceType: webcam;  videoTexture: true; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+    <a-camera look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera="minDistance: 5;" rotation-reader></a-camera>
+    <a-assets>
+        <img id="locn" src="/images/external-Pointer-poi-others-inmotus-design.png">
+    </a-assets>
 </a-scene>
 </body>
