--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
     <script src="./script.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
@@ -21,7 +23,10 @@
         arjs='sourceType: webcam;  videoTexture: true; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
     <a-camera look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera="minDistance: 25;" rotation-reader></a-camera>
     <a-assets>
-        <img id="locn" src="/images/external-Pointer-poi-others-inmotus-design.png">
+        <img id="locn" src="/images/clock.png">
     </a-assets>
 </a-scene>
+<div class="centered">
+    <button data-action="change"></button>
+</div>
 </body>
