--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
     <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
 
 </a-scene>
-<div class="left">
-    <button data-action="change"> Book </button>
-</div>
 <div class="centered">
+    <button data-action="change"> Book </button>
     <button data-action="change"> ! </button>
-</div>
-<div class="right">
-    <button data-action="change"> &#128266; &#x1F50A; </button>
+    <button data-action="change"> Audio </button>
 </div>
 </body>
