--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>User Interaction demo</title>
-    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script>
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
@@ -21,6 +20,6 @@
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
     </a-scene>
 <div class="centered">
-    <button data-action="change">!</button>
+    <button data-action="change"></button>
 </div>
 </body>
