--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
     </a-scene>
 <div class="centered">
-    <button data-action="change">!</button>
+    <button data-action="">Buy</button>
 </div>
 </body>
