--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
         <div class="centered">
             <button data-action="">Buy</button>
+            <BUTTON data-action="">Listen
+                <audio controls>
+                    <source src="horse.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+            </button>
         </div>
     </a-scene>
 </body>
