--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
+    </a-scene>
+    <div class="centered">
         <button data-action="">Buy</button>
-        <button.soundbtn data-action="">
+        <img src="./images/speaker.png">
             <audio>
                 <source src="horse.mp3" type="audio/mpeg">
                 Your browser does not support the audio tag.
             </audio>
-        </button>
-    </a-scene>
+        </img>
+    </div>
 </body>
