--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
     </a-scene>
     <div class="centered">
-        <button data-action="">Buy</button>
-        <img src="./images/speaker.png">
-            <audio>
-                <source src="horse.mp3" type="audio/mpeg">
-                Your browser does not support the audio tag.
-            </audio>
-        </img>
+        <button data-action="change">Buy</button>
+        <button data-action="change">&#128266; </button>
     </div>
 </body>
