--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>User Interaction demo</title>
-    <script src='https://aframe.io/releases/1.3.0/aframe.min.js'></script>
+    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script>
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
     <script src="./script.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
@@ -21,8 +20,7 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
     </a-scene>
-    <div class="centered">
-        <button data-action="change">Buy</button>
-        <button data-action="change">&#128266; </button>
-    </div>
+<div class="centered">
+    <button data-action="change">!</button>
+</div>
 </body>
