--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
     <script src="./script.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
@@ -20,7 +21,9 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         <a-camera gps-camera="minDistance: 15;" rotation-reader></a-camera>
     </a-scene>
-<div class="centered">
-    <button data-action="change">!</button>
-</div>
+    <div class="centered">
+        <button data-action="change">Buy</button>
+        &nbsp;
+        <button data-action="change">&#128266; </button>
+    </div>
 </body>
